# xm_speech_for_linux_2018

./: CMakeLists.txt  README.txt  xm_speech.launch
doc/iFlytek MSC Reference Manual/: all__11_8js.html  all__2_8js.html  all__3_8js.html  all__6_8js.html  all__a_8js.html  all__e_8js.html  files__1_8js.html  files__3_8js.html  files__5_8js.html  functions__3_8js.html  functions__5_8js.html  functions__8_8js.html  functions__a_8js.html  globals_vars.html  jquery_8js.html  search_8js.html  searchdata_8js.html  variables__5_8js.html
doc/iFlytek MSC Reference Manual/search/: all_5.html  all_5.js  all_7.html  all_9.html  all_d.html  all_e.js  functions_3.html  functions_4.html  variables_6.html
include/: msp_errors.h~  qisr.h~
scripts/: subprocess  xm_speech_client.py~  xm_speech_client_18_4.py  xm_speech_client_demo.py  xm_speech_client_demo.py~  xm_speech_client_last.py
src/: tts_sample.cpp  xm_speech_server.cpp  xm_speech_server.cpp~
srv/: XM_SPEAK_CLIENT.srv~
